# embedding-distillation

./: .gitignore  README.md  config_async.yaml  config_sync.yaml  data_loading.py  main.py  metrics_support.py  model_definition.py  model_support.py  openapi_rerank.yaml  pyproject.toml  trainer.py
rerank_client_async/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
rerank_client_async/.github/workflows/: python.yml
rerank_client_async/.openapi-generator/: FILES
rerank_client_async/docs/: DefaultApi.md  RerankRequest.md  RerankRequestRid.md  RerankResponse.md  RerankResult.md  UsageInfo.md
rerank_client_async/rerank_client_async/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
rerank_client_async/rerank_client_async/api/: __init__.py  default_api.py
rerank_client_async/test/: test_default_api.py  test_rerank_request.py  test_rerank_request_rid.py  test_rerank_response.py  test_rerank_result.py  test_usage_info.py
rerank_client_sync/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
rerank_client_sync/.github/workflows/: python.yml
rerank_client_sync/.openapi-generator/: FILES
rerank_client_sync/docs/: DefaultApi.md  RerankRequest.md  RerankRequestRid.md  RerankResponse.md  RerankResult.md  UsageInfo.md
rerank_client_sync/rerank_client_sync/: __init__.py  api_client.py  configuration.py  rest.py
rerank_client_sync/test/: test_default_api.py  test_rerank_request.py  test_rerank_request_rid.py  test_rerank_response.py  test_rerank_result.py  test_usage_info.py
(+2 files in other folders)
