[project]
name = "training"
version = "0.1.0"
description = "Train Pooling Head"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "datasets<4.0",
    "flagembedding>=1.3.5",
    "huggingface-hub[cli]>=0.34.4",
    "isort>=6.0.1",
    "torch>=2.8.0",
]
